--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,22 @@
-
 services:
   web:
-    # Changed to official PHP image for better long-term support
-    image: php:8.3-apache 
+    # --- CHANGE THIS LINE ---
+    # Instead of 'image: php:8.3-apache', we use 'build: .' 
+    # The '.' tells Docker Compose to look for the Dockerfile in the current directory.
+    build: . 
+    # ------------------------
+    
     ports:
       - "80:80"
     volumes:
-      - ./PHP:/var/www/html # Official images often use /var/www/html as web root
+      - ./PHP:/var/www/html
     environment:
-      # Ensure env vars match what the image expects if applicable
       MYSQL_DATABASE: my_database
       MYSQL_USER: my_user
       MYSQL_PASSWORD: my_password
-      MYSQL_ROOT_PASSWORD: root_password
+      MYSQL_ROOT_PASSWORD: root_password # Not usually needed for the PHP service
 
   db:
-    # Changed to LTS for stability
     image: mariadb:lts 
     volumes:
       - ./MariaDB:/var/lib/mysql
@@ -26,7 +27,7 @@ services:
       MYSQL_PASSWORD: my_password
     ports:
       - "3306:3306"
-    healthcheck: # Added a healthcheck for better container management
+    healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
       interval: 30s
       timeout: 10s
@@ -37,5 +38,5 @@ services:
     ports:
       - "8080:80"
     environment:
-      PMA_HOST: db
+      PMA_HOST: db # IMPORTANT: This connects phpMyAdmin to the 'db' service
       MYSQL_ROOT_PASSWORD: root_password
