--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,23 @@
 services:
-  # The Web Server (Handles incoming traffic)
-  nginx:
-    image: nginx:alpine
-    container_name: web_server
+  web:
+    # --- CHANGE THIS LINE ---
+    # Instead of 'image: php:8.3-apache', we use 'build: .' 
+    # The '.' tells Docker Compose to look for the Dockerfile in the current directory.
+    build: . 
+    # ------------------------
+    
     ports:
       - "80:80"
-    volumes:
-      - ./PHP:/var/www/html
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
-    depends_on:
-      - php
-    restart: unless-stopped
-
-  # The PHP Processor (Uses your custom Dockerfile)
-  php:
-    build: .
-    container_name: php_processor
     volumes:
       - ./PHP:/var/www/html
     environment:
       MYSQL_DATABASE: my_database
       MYSQL_USER: my_user
       MYSQL_PASSWORD: my_password
-    restart: unless-stopped
+      MYSQL_ROOT_PASSWORD: root_password # Not usually needed for the PHP service
 
-  # The Database
   db:
     image: mariadb:lts 
-    container_name: database
     volumes:
       - ./MariaDB:/var/lib/mysql
     environment:
@@ -35,17 +25,18 @@ services:
       MYSQL_DATABASE: my_database
       MYSQL_USER: my_user
       MYSQL_PASSWORD: my_password
+    ports:
+      - "3306:3306"
     healthcheck:
-      test: ["CMD", "healthcheck.sh", "--connect", "--innodb_initialized"]
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
       interval: 30s
       timeout: 10s
       retries: 3
 
-  # Database Management Tool
   phpmyadmin:
     image: phpmyadmin:latest
     ports:
       - "8080:80"
     environment:
-      PMA_HOST: db
+      PMA_HOST: db # IMPORTANT: This connects phpMyAdmin to the 'db' service
       MYSQL_ROOT_PASSWORD: root_password
