Refactor DB config to use environment variables
Updated PHP database configuration to retrieve credentials from environment variables instead of hardcoded values. Added PMA_HOST to docker-compose environment and updated README with .env setup instructions for database credentials. Minor formatting improvements in README and uploader.php.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       MYSQL_DATABASE: ${MYSQL_DATABASE}
       MYSQL_USER: ${MYSQL_USER}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      PMA_HOST: ${PMA_HOST}
     restart: unless-stopped
 
   # The Database
