--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: nginx:alpine
     container_name: web_server
     ports:
-      - "80:80"
+      - "${PORT}:80"
     volumes:
       - ./PHP:/var/www/html
       - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
