--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -1,8 +1,9 @@
 server {
     listen ${PORT};
     server_name localhost;
-    
-    # Matches your PHP WORKDIR
+    sendfile off;
+    tcp_nopush off;
+
     root /var/www/html;
     index index.php index.html;
 
