--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     container_name: web_server_lytestorage
     ports:
       - "${PORT:-8080}:${PORT:-8080}"
+    volumes:
+      - ./PHP:/var/www/html
     environment:
       - PORT=${PORT:-8080}
     depends_on:
@@ -19,10 +21,10 @@ services:
     container_name: php_processor
     volumes:
       - ./PHP:/var/www/html
-    entrypoint: >
+    command: >
       sh -c "mkdir -p /var/www/html/server/images && 
-             chown -R www-data:www-data /var/www/html/server/images && 
-             chmod -R 777 /var/www/html/server/images && 
+             chmod -R 777 /var/www/html && 
+             chown -R www-data:www-data /var/www/html && 
              php-fpm"
     environment:
       MYSQL_DATABASE: ${MYSQL_DATABASE}
