--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -3,6 +3,7 @@ server {
     server_name localhost;
     sendfile off;
     tcp_nopush off;
+    tcp_nodelay on;
 
     root /var/www/html;
     index index.php index.html;
